Fix non-wrappping text in content management.

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -137,6 +137,10 @@ h6 {
   margin-left: auto;
 }
 
+.container-fluid {
+    white-space: normal;
+}
+
 .main-container {
   padding-top: 0;
 }
